[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-mixpeek"
version = "0.4.3"
description = "Give your LangChain agents eyes, ears, and memory — multimodal search, ingestion, and monitoring for video, images, audio, and documents"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Mixpeek", email = "info@mixpeek.com"}]
keywords = ["langchain", "mixpeek", "multimodal", "retriever", "rag", "agents", "video", "audio", "image", "ai", "toolkit", "vectorstore"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = [
    "mixpeek>=0.1.0",
    "langchain-core>=0.1.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.0",
    "pytest-asyncio>=0.21.1",
    "pytest-mock>=3.10.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.urls]
Homepage = "https://mixpeek.com"
Documentation = "https://docs.mixpeek.com/agent-integrations/langchain"
Repository = "https://github.com/mixpeek/langchain-mixpeek"
Issues = "https://github.com/mixpeek/langchain-mixpeek/issues"
Changelog = "https://github.com/mixpeek/langchain-mixpeek/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/langchain_mixpeek"]

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "mixpeek.*"
ignore_missing_imports = true

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "TCH"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["langchain_mixpeek"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: marks tests that require API keys",
]
